Fix result count and ordering control alignment.

--- a/plugins/woocommerce/legacy/css/twenty-twenty-two.scss
+++ b/plugins/woocommerce/legacy/css/twenty-twenty-two.scss
@@ -41,6 +41,12 @@
 		max-width: 1000px;
 	}
 
+	.wp-site-blocks > .wp-block-group {
+		max-width: 1000px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
 	// Common
 	.woocommerce-products-header {
 		h1.page-title {
@@ -155,19 +161,12 @@
 	// Shop page
 
 	.woocommerce-result-count {
-		float: none;
-		width: 100%;
+		margin-top: 0;
 		font-size: 0.9rem;
 	}
 
 	.woocommerce-ordering {
-		//170px is box size, 50% - 330px is to give right alignment.
-		// 330 = 500 (50% of max container width) - 170 (box size).
-		width: max(170px, calc( 50% - 330px ) );
-		// For wide screens
-		max-width: 100%;
-
-		margin-top: 0;
+		margin-top: -0.2rem;
 		margin-bottom: 3rem;
 
 		select {
@@ -177,6 +176,9 @@
 
 	// Products.
 	ul.products {
+
+		padding-inline-start: 0;
+
 		li.product {
 			list-style: none;
 			margin-top: var(--wp--style--block-gap);
